--- a/Section12Pointers/Makefile
+++ b/Section12Pointers/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ SectionChallenge - Debug ]----------"
-	@cd "SectionChallenge" && "$(MAKE)" -f  "SectionChallenge.mk"
+	@echo "----------Building project:[ MergeSort - Debug ]----------"
+	@cd "MergeSort" && "$(MAKE)" -f  "MergeSort.mk"
 clean:
-	@echo "----------Cleaning project:[ SectionChallenge - Debug ]----------"
-	@cd "SectionChallenge" && "$(MAKE)" -f  "SectionChallenge.mk" clean
+	@echo "----------Cleaning project:[ MergeSort - Debug ]----------"
+	@cd "MergeSort" && "$(MAKE)" -f  "MergeSort.mk" clean
